# CookieBlock-Consent-Crawler

./: .dockerignore  .gitignore  .gitlab-ci.yml  .sync-exclude.lst  CHANGELOG.md  Dockerfile  README.md  add_default_timeout.patch  install_uc.sh  pyproject.toml  run_consent_crawl_uc.py
crawler/: README.md  alembic.ini  browser.py  consent_crawl_runner.sh  database.py  enums.py  run_consent_crawl.py  run_consent_crawl_uc.py  run_presence_crawl.py  utils.py
crawler/alembic/: env.py
crawler/alembic/versions/: b5bcfcc546e8_initial_version.py
crawler/cmps/: abstract_cmp.py  cookiebot.py  onetrust.py  termly.py
crawler/js/: get_links.js
crawler/openwpm/automation/: TaskManager.py
crawler/openwpm/automation/Commands/: browser_commands.py  cmp_scrape_commands.py  cookiebot_commands.py  profile_commands.py
database_processing/: extract_cookies_from_db.py
doc/: dev_notes.md
docker-compose/: docker-compose.yml  list.txt
old_scripts/: extract_cookies_from_db.py
scripts/: merge_trainingdata.sh  run-tests.sh
