[tool.poetry]
name = "CookieBlock-consent-crawler"
version = "0.1-dev"
description = "Classification service for privacy policies and terms and conditions"
authors = ["Karel Kubicek", "Dino Bollinger"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
presence_crawl = "service:main"
consent_crawl = "service:main"

[tool.poetry.dependencies]
tqdm = "^4.66.4"
python = "^3.12"
tblib = "^3.0.0"
scikit-learn = "^1.5.0"
requests = "^2.32.2"
pebble = "^5.0.7"
psutil = "^5.9.8"
pillow = "^10.3.0"
domain-utils = "^0.7.1"
undetected-chromedriver = "^3.5.5"
hyperlink = "^21.0.0"
selenium-stealth = "^1.0.6"
selenium-wire = "^5.1.0"
blinker = "<1.8.0"
alembic = "^1.13.1"
bs4 = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
